--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Venkata Rachana Yekkirala — Data Engineer / Analyst portfolio" />
-  <title>Rachana | Data Engineer / Analyst</title>
+  <meta name="description" content="Venkata Rachana Yekkirala — Business Analyst / Data Analyst portfolio" />
+  <title>Rachana | Business Analyst • Data Analytics • BI</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
       <a class="brand" href="#top" aria-label="Go to top">
         <span class="mark"></span>
         <span class="name">Rachana</span>
-        <span class="role">Data Engineering • Analytics • BI</span>
+        <span class="role">Business Analyst • Data Analytics • BI</span>
       </a>
 
       <nav class="nav" aria-label="Primary navigation">
@@ -47,7 +47,7 @@
         <button class="iconbtn" id="themeBtn" aria-label="Toggle theme" title="Toggle theme">
           <span id="themeIcon">☾</span>
         </button>
-        <a class="btn primary" id="resumeBtn" href="resume.pdf" target="_blank" rel="noopener">Resume</a>
+        <a class="btn primary" id="resumeBtn" href="YVR.pdf" target="_blank" rel="noopener">Resume</a>
         <button class="hamburger" id="hamburger" aria-label="Open menu" aria-expanded="false">
           <span></span><span></span><span></span>
         </button>
@@ -63,50 +63,51 @@
         <a class="mobilelink" href="#experience">Experience</a>
         <a class="mobilelink" href="#credibility">Credibility</a>
         <a class="mobilelink" href="#contact">Contact</a>
-        <a class="btn primary full" href="resume.pdf" target="_blank" rel="noopener">Resume</a>
+        <a class="btn primary full" href="YVR.pdf" target="_blank" rel="noopener">Resume</a>
       </div>
     </div>
   </header>
 
   <main>
-    <!-- HERO (Neha Nooka-style: crisp promise + proof + CTA) -->
+    <!-- HERO -->
     <section class="wrap hero">
       <div class="hero-left reveal">
         <div class="pill">
           <span class="dot"></span>
-          <span id="availability">Open to Data Engineer / Analyst roles</span>
+          <span id="availability">Open to Business Analyst / Data Analyst roles</span>
         </div>
 
         <h1 class="h1">
-          I build data systems that feel calm.
-          <span class="h1-soft">Reliable pipelines. Clear metrics. Dashboards people trust.</span>
+          I turn complex data into clear decisions.
+          <span class="h1-soft">KPI systems • executive dashboards • analytics you can trust.</span>
         </h1>
 
         <p class="lead">
-          I’m <b>Venkata Rachana Yekkirala</b> (UMBC Data Science, May 2024). I work across
-          <b>AWS, SQL, Python, Kafka/Spark, Power BI</b> to ship analytics-ready datasets and decision-grade reporting.
+          I’m <b>Venkata Rachana Yekkirala</b> — with <b>2+ years</b> across data analytics, business analysis,
+          and cloud-based platforms. I work hands-on with <b>AWS, SQL, Power BI, Tableau, Snowflake</b> to ship
+          reliable reporting and stakeholder-ready insights.
         </p>
 
         <div class="cta">
-          <a class="btn primary" href="#case-studies">See case studies</a>
+          <a class="btn primary" href="#case-studies">View case studies</a>
           <button class="btn ghost" id="copyEmailBtn">Copy email</button>
         </div>
 
         <div class="proof">
           <div class="proof-card">
-            <div class="kicker">Scale</div>
-            <div class="big">10M+ records</div>
-            <div class="muted">Handled across analytics pipelines</div>
+            <div class="kicker">Impact</div>
+            <div class="big">45% faster ETL</div>
+            <div class="muted">Lakehouse pipeline optimization</div>
           </div>
           <div class="proof-card">
-            <div class="kicker">Efficiency</div>
-            <div class="big">30–45% wins</div>
-            <div class="muted">Automation + query optimization</div>
+            <div class="kicker">Quality</div>
+            <div class="big">30% more reliable</div>
+            <div class="muted">Validation + QA checks</div>
           </div>
           <div class="proof-card">
-            <div class="kicker">Delivery</div>
-            <div class="big">8–12 dashboards</div>
-            <div class="muted">Operational + KPI reporting</div>
+            <div class="kicker">Modeling</div>
+            <div class="big">KPI systems</div>
+            <div class="muted">Definitions, validation, reporting logic</div>
           </div>
         </div>
 
@@ -117,7 +118,7 @@
         </div>
       </div>
 
-      <!-- Humanoid “interface” card -->
+      <!-- Humanoid “console” -->
       <div class="hero-right reveal">
         <div class="glass humanoid">
           <div class="humanoid-top">
@@ -125,7 +126,7 @@
             <div class="eye"></div>
             <div class="hum-title">
               <div class="kicker">Humanoid console</div>
-              <div class="big">Signal Engine</div>
+              <div class="big">Decision Layer</div>
             </div>
             <div class="hum-glow"></div>
           </div>
@@ -134,99 +135,93 @@
             <div class="scan"></div>
 
             <div class="hum-row">
-              <span class="tag">INGEST</span>
-              <span class="muted">S3/Glue/Lambda → validated datasets</span>
+              <span class="tag">DEFINE</span>
+              <span class="muted">KPIs • metric logic • reporting rules</span>
             </div>
             <div class="hum-row">
-              <span class="tag">MODEL</span>
-              <span class="muted">KPI definitions → consistent grain</span>
+              <span class="tag">VALIDATE</span>
+              <span class="muted">Reconciliation • QA • audit-ready checks</span>
             </div>
             <div class="hum-row">
-              <span class="tag">SERVE</span>
-              <span class="muted">Athena/Redshift → BI-ready tables</span>
+              <span class="tag">ANALYZE</span>
+              <span class="muted">SQL insights • variance • root cause</span>
             </div>
             <div class="hum-row">
-              <span class="tag">OBSERVE</span>
-              <span class="muted">Checks, logs, monitoring patterns</span>
+              <span class="tag">VISUALIZE</span>
+              <span class="muted">Power BI/Tableau dashboards • self-service</span>
             </div>
 
             <div class="hum-foot">
-              <span class="mini">Quality-first</span>
-              <span class="mini">Stakeholder-ready</span>
-              <span class="mini">Production mindset</span>
+              <span class="mini">Clean</span>
+              <span class="mini">Explainable</span>
+              <span class="mini">Decision-ready</span>
             </div>
           </div>
         </div>
 
         <div class="glass mini-note reveal">
-          <div class="kicker">How I think</div>
+          <div class="kicker">How I work</div>
           <div class="muted">
-            Most data work fails because metrics aren’t owned. I align definitions first, then build pipelines that enforce them.
+            I align stakeholders on metric definitions first, then build dashboards and datasets that enforce those rules consistently.
           </div>
         </div>
       </div>
     </section>
 
-    <!-- WORK (Neha Nooka-style “what I do” with clean blocks) -->
+    <!-- WORK -->
     <section class="wrap section" id="work">
       <div class="section-head reveal">
         <h2>What I deliver</h2>
-        <p class="muted">Clear outcomes, not tool lists.</p>
+        <p class="muted">Neha Nooka-style: outcomes first, tools second.</p>
       </div>
 
       <div class="deliver-grid">
         <div class="glass deliver reveal">
-          <div class="kicker">1. Data foundations</div>
-          <div class="big">Pipelines you can trust</div>
-          <p class="muted">
-            Ingestion, transformation, and validation patterns that keep datasets clean and explainable.
-          </p>
+          <div class="kicker">1) KPI Systems</div>
+          <div class="big">Metrics that don’t drift</div>
+          <p class="muted">KPI definition, validation, and documentation so teams measure the same truth.</p>
           <div class="bullets">
-            <div class="bullet">Batch/stream ingestion + schema discipline</div>
-            <div class="bullet">Quality checks before publishing curated tables</div>
-            <div class="bullet">Monitoring-friendly structure and logs</div>
+            <div class="bullet">KPI definition + validation rules</div>
+            <div class="bullet">BRD/RTM/UAT coordination</div>
+            <div class="bullet">Executive-ready reporting logic</div>
           </div>
         </div>
 
         <div class="glass deliver reveal">
-          <div class="kicker">2. Metrics systems</div>
-          <div class="big">KPI definitions that stick</div>
-          <p class="muted">
-            I turn “what happened?” into “what should we do?” using consistent KPI grain and ownership.
-          </p>
+          <div class="kicker">2) Analytics</div>
+          <div class="big">Insights you can act on</div>
+          <p class="muted">Ad-hoc SQL, variance analysis, root cause analysis, and experimentation support.</p>
           <div class="bullets">
-            <div class="bullet">Metric definitions + documentation basics</div>
-            <div class="bullet">Variance analysis and decision thresholds</div>
-            <div class="bullet">Stakeholder alignment without noise</div>
+            <div class="bullet">SQL (CTEs, windows, optimization)</div>
+            <div class="bullet">A/B testing and success metrics</div>
+            <div class="bullet">Trend and anomaly detection</div>
           </div>
         </div>
 
         <div class="glass deliver reveal">
-          <div class="kicker">3. BI + decision layers</div>
-          <div class="big">Dashboards that drive action</div>
-          <p class="muted">
-            Power BI/Tableau outputs designed for weekly business reviews and real decisions.
-          </p>
+          <div class="kicker">3) BI</div>
+          <div class="big">Dashboards people trust</div>
+          <p class="muted">Power BI/Tableau dashboards designed for decision workflows and self-service.</p>
           <div class="bullets">
-            <div class="bullet">Clean modeling + reusable measures</div>
-            <div class="bullet">Executive + operational views</div>
-            <div class="bullet">Clarity-first layout and storytelling</div>
+            <div class="bullet">Power BI (DAX, modeling, KPIs)</div>
+            <div class="bullet">Tableau dashboards + calculated fields</div>
+            <div class="bullet">Clean layout + narrative clarity</div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- CASE STUDIES (Neha Nooka-style: selected work, deep but readable) -->
+    <!-- CASE STUDIES -->
     <section class="wrap section" id="case-studies">
       <div class="section-head reveal">
         <h2>Case studies</h2>
-        <p class="muted">Click a card for the story: problem → approach → impact.</p>
+        <p class="muted">Click a card: problem → approach → impact.</p>
       </div>
 
       <div class="controls glass reveal">
         <div class="filters" id="filters"></div>
         <div class="search">
-          <input id="searchInput" type="text" placeholder="Search: lakehouse, kafka, power bi, healthcare..." autocomplete="off" />
+          <input id="searchInput" type="text" placeholder="Search: lakehouse, fraud, genai, power bi..." autocomplete="off" />
           <button class="iconbtn" id="clearSearch" aria-label="Clear search">✕</button>
         </div>
       </div>
@@ -234,11 +229,11 @@
       <div class="cards" id="projectGrid"></div>
     </section>
 
-    <!-- SKILLS (clean grouping, not cliché) -->
+    <!-- SKILLS -->
     <section class="wrap section" id="skills">
       <div class="section-head reveal">
         <h2>Skills</h2>
-        <p class="muted">Grouped for readability. Depth over buzzwords.</p>
+        <p class="muted">Grouped, readable, and ATS-friendly.</p>
       </div>
 
       <div class="skills-grid" id="skillsGrid"></div>
@@ -248,7 +243,7 @@
     <section class="wrap section" id="experience">
       <div class="section-head reveal">
         <h2>Experience</h2>
-        <p class="muted">Timeline with outcomes and scope.</p>
+        <p class="muted">Business analysis + analytics + cloud platforms.</p>
       </div>
 
       <div class="timeline" id="timeline"></div>
@@ -258,14 +253,15 @@
     <section class="wrap section" id="credibility">
       <div class="section-head reveal">
         <h2>Credibility</h2>
-        <p class="muted">Education and certifications.</p>
+        <p class="muted">Education + certifications.</p>
       </div>
 
       <div class="cred-grid">
-        <div class="glass pad reveal" id="educationCard">
+        <div class="glass pad reveal">
           <div class="kicker">Education</div>
           <div class="big">UMBC • Data Science</div>
-          <div class="muted">Master’s degree • Graduated May 2024</div>
+          <div class="muted">Master of Professional Studies in Data Science • Aug 2022 – May 2024</div>
+          <div class="muted" style="margin-top:8px;">MLRIT • Electronics & Communication Engineering • Aug 2018 – Aug 2020</div>
         </div>
 
         <div class="glass pad reveal">
@@ -274,10 +270,9 @@
         </div>
 
         <div class="glass pad reveal">
-          <div class="kicker">Strengths</div>
+          <div class="kicker">Core strengths</div>
           <div class="muted">
-            SQL-first problem solving, AWS hands-on execution, and dashboards built around metrics ownership.
-            Comfortable across engineering and business conversations.
+            Stakeholder alignment, audit-ready reporting logic, strong SQL analysis, dashboard design, and quality-first data validation.
           </div>
         </div>
       </div>
@@ -293,7 +288,7 @@
       <div class="contact-grid">
         <div class="glass pad reveal">
           <div class="big">Let’s talk.</div>
-          <p class="muted">Hiring for Data Engineer / Analyst roles? I can share a tailored resume and walkthrough.</p>
+          <p class="muted">Hiring for Business Analyst / Data Analyst roles? I can share a tailored resume and project walkthrough.</p>
 
           <div class="contact-actions">
             <a class="btn primary" id="emailBtn" href="#">Email me</a>
@@ -312,13 +307,13 @@
         <div class="glass pad reveal">
           <div class="kicker">Quick note generator</div>
           <div class="big">Message draft</div>
-          <p class="muted small">Type a role/company. This creates a clean email draft you can copy.</p>
+          <p class="muted small">Type a role/company and focus. It generates a clean email draft you can copy.</p>
 
           <label class="label">Role / Company</label>
-          <input class="input" id="roleInput" placeholder="e.g., Data Engineer at Amazon" />
+          <input class="input" id="roleInput" placeholder="e.g., Business Analyst at UnitedHealth" />
 
           <label class="label">What should I highlight?</label>
-          <textarea class="input area" id="focusInput" placeholder="e.g., AWS lakehouse, Kafka streaming, Power BI KPIs"></textarea>
+          <textarea class="input area" id="focusInput" placeholder="e.g., KPI validation, Power BI dashboards, SQL analysis, AWS data platforms"></textarea>
 
           <button class="btn primary full" id="draftBtn">Generate draft</button>
           <div class="draftbox" id="draftBox" aria-live="polite"></div>
@@ -326,7 +321,7 @@
       </div>
 
       <footer class="footer">
-        <span class="muted small">© <span id="year"></span> Rachana • Built for GitHub Pages</span>
+        <span class="muted small">© <span id="year"></span> Venkata Rachana Yekkirala • Built for GitHub Pages</span>
         <a class="muted small" href="#top">Back to top ↑</a>
       </footer>
     </section>
