--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Venkata Rachana Yekkirala | Data & Business Analyst Portfolio" />
-  <title>Rachana | Portfolio</title>
+  <title>Venkata Rachana Yekkirala | Portfolio</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,7 +67,7 @@
         <div class="hero-left reveal">
           <div class="pill">
             <i data-lucide="sparkles"></i>
-            <span>Data & Business Analyst • SQL • GCP BigQuery • Dashboards</span>
+            <span>Data & Business Analyst • SQL • AWS • Dashboards</span>
           </div>
 
           <h1 class="h1">
@@ -130,7 +130,7 @@
     "EHR + claims alignment",
     "dashboards + KPI metrics"
   ],
-  tools: ["SQL", "GCP BigQuery", "Python", "R (exposure)"],
+  tools: ["SQL", "AWS","BigQuery", "Python", "R (exposure)"],
   strengths: [
     "requirements → technical translation",
     "data validation + quality checks",
@@ -141,7 +141,7 @@
 
             <div class="chips">
               <span class="chip">SQL</span>
-              <span class="chip">GCP</span>
+              <span class="chip">AWS</span>
               <span class="chip">BigQuery</span>
               <span class="chip">Dashboards</span>
               <span class="chip">EDA</span>
