--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="quick">
             <div class="q">
               <i data-lucide="map-pin"></i>
-              <span>Maryland, USA</span>
+              <span>Maryland, USA(Open to Rellocation)</span>
             </div>
             <div class="q">
               <i data-lucide="phone"></i>
@@ -558,7 +558,7 @@
 
     <label>
       <span>Message</span>
-      <textarea name="message" rows="5" placeholder="Tell me what you’re looking for..." required></textarea>
+      <textarea name="message" rows="5" required></textarea>
     </label>
 
     <button class="btn primary" id="sendBtn" type="submit">
